docs/v0.2.0a167/_sources/reference/_autosummary/hpcflow.sdk.core.errors.rst.txt
hpcflow.sdk.core.errors
=======================

.. toctree::
   :includehidden:

.. automodule:: hpcflow.sdk.core.errors

   
   
   

   
   
   

   
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
   
      ActionEnvironmentMissingNameError
      ContainerKeyError
      DuplicateExecutableError
      EnvironmentPresetUnknownEnvironmentError
      EnvironmentSpecValidationError
      ExtraInputs
      FileSpecValidationError
      FromSpecMissingObjectError
      InapplicableInputSourceElementIters
      IncompatibleParallelModeError
      IncompatibleSGEPEError
      IncompatibleSLURMArgumentsError
      IncompatibleSLURMPartitionError
      InputSourceValidationError
      InputValueDuplicateSequenceAddress
      InvalidIdentifier
      InvalidInputSourceTaskReference
      JobscriptSubmissionFailure
      LoopAlreadyExistsError
      MalformedNestingOrderPath
      MalformedParameterPathError
      MalformedWorkflowError
      MayNeedObjectError
      MissingActionEnvironment
      MissingCompatibleActionEnvironment
      MissingEnvironmentError
      MissingEnvironmentExecutableError
      MissingEnvironmentExecutableInstanceError
      MissingInputs
      MissingParameterData
      MissingStoreEARError
      MissingStoreElementError
      MissingStoreElementIterationError
      MissingStoreTaskError
      MissingVariableSubstitutionError
      MultipleEnvironmentsError
      NoAvailableElementSetsError
      NoCLIFormatMethodError
      NoCoincidentInputSources
      NoCompatibleSGEPEError
      NotSubmitMachineError
      OutputFileParserNoOutputError
      ParameterSpecValidationError
      ResourceValidationError
      RunNotAbortableError
      SchedulerVersionsFailure
      SubmissionEnvironmentError
      SubmissionFailure
      TaskSchemaMissingParameterError
      TaskSchemaSpecValidationError
      TaskTemplateInvalidNesting
      TaskTemplateMultipleInputValues
      TaskTemplateMultipleSchemaObjectives
      TaskTemplateUnexpectedInput
      TaskTemplateUnexpectedSequenceInput
      ToJSONLikeChildReferenceError
      UnavailableInputSource
      UnknownEnvironmentPresetError
      UnknownResourceSpecItemError
      UnknownSGEPEError
      UnknownSLURMPartitionError
      UnknownScriptDataKey
      UnknownScriptDataParameter
      UnrequiredInputSources
      UnsetParameterDataError
      UnsupportedOSError
      UnsupportedSchedulerError
      UnsupportedScriptDataFormat
      UnsupportedShellError
      ValuesAlreadyPersistentError
      WorkflowBatchUpdateFailedError
      WorkflowLimitsError
      WorkflowNotFoundError
      WorkflowParameterMissingError
      WorkflowSpecValidationError
      WorkflowSubmissionFailure
   
   



